:bug: Ajuste nos dados em formato CDATA